# ra-pac

./: Cargo.toml  README.md  build.rs  build_command.rs  gen_pacs.py  rust-toolchain.toml
.github/workflows/: cicd.yml
pac/ra0e1-pac/: Cargo.toml  README.md
pac/ra0e1-pac/src/: adc_d.rs  bus.rs  common.rs  crc.rs  dbg.rs  dtc.rs  elc.rs  flcn.rs  icu.rs  iica.rs  iwdt.rs  lib.rs  mstp.rs  pclbuz.rs  pfs_a.rs  porga.rs  port0.rs  port1.rs  port2.rs  port3.rs  port4.rs  port9.rs  reg_name.rs  rtc_c.rs  sau0.rs  sau1.rs  sram.rs  sysc.rs  tau.rs  tml32.rs  tracing.rs  trng.rs  uarta.rs
pac/ra2a1-pac/: Cargo.toml  README.md
pac/ra2a1-pac/src/: acmphs0.rs  acmplp.rs  adc160.rs  agt0.rs  bus.rs  cac.rs  can0.rs  common.rs  crc.rs  ctsu.rs  dac12.rs  dac8.rs  dbg.rs  doc.rs  dtc.rs  elc.rs  fcache.rs  gpt161.rs  gpt320.rs  gpt_ops.rs  icu.rs  iic0.rs  iic1.rs  iwdt.rs  kint.rs  lib.rs  mmf.rs  mmpu.rs  mstp.rs  opamp.rs  pfs.rs  pmisc.rs  poeg.rs  port0.rs  port1.rs  reg_name.rs  rtc.rs  sci0.rs  sci1.rs  sdadc24.rs  (+9 more)
pac/ra2a2-pac/: Cargo.toml  README.md
pac/ra2a2-pac/src/: adc120.rs  agt0.rs  agtw0.rs  bus.rs  cac.rs  common.rs  crc.rs  dbg.rs  doc.rs  dtc.rs  elc.rs  flcn.rs  gpt164.rs  gpt_ops.rs  icu.rs  iic0.rs  iic0wu.rs  iwdt.rs  lib.rs  macl.rs  mmf.rs  mstp.rs  pfs.rs  poeg.rs  port0.rs  port1.rs  reg_name.rs  rmpu.rs  rtc.rs  sci0.rs  sci1.rs  sdadc24_b.rs  slcdc.rs  spi0.rs  (+4 more)
pac/ra2e1-pac/: Cargo.toml  README.md  device.x
pac/ra2e2-pac/: Cargo.toml  README.md
pac/ra2e3-pac/: Cargo.toml  README.md
pac/ra2l1-pac/: Cargo.toml  README.md
pac/ra4e1-pac/: Cargo.toml  README.md
pac/ra4e2-pac/: Cargo.toml  README.md
pac/ra4l1-pac/: Cargo.toml  README.md
pac/ra4m1-pac/: Cargo.toml  README.md
pac/ra4m2-pac/: Cargo.toml  README.md
pac/ra4m3-pac/: Cargo.toml  README.md
pac/ra4t1-pac/: Cargo.toml  README.md
pac/ra4w1-pac/: Cargo.toml  README.md
pac/ra6e1-pac/: Cargo.toml  README.md
pac/ra6e2-pac/: Cargo.toml  README.md
pac/ra6m1-pac/: Cargo.toml  README.md
pac/ra6m2-pac/: Cargo.toml  README.md
pac/ra6m3-pac/: Cargo.toml  README.md
pac/ra6m4-pac/: Cargo.toml  README.md
pac/ra6m5-pac/: Cargo.toml  README.md
pac/ra6t1-pac/: Cargo.toml  README.md
pac/ra6t2-pac/: Cargo.toml  README.md
pac/ra6t3-pac/: Cargo.toml  README.md
pac/ra8d1-pac/: Cargo.toml  README.md
pac/ra8e1-pac/: Cargo.toml  README.md
pac/ra8e2-pac/: Cargo.toml  README.md
pac/ra8m1-pac/: Cargo.toml  README.md  log.txt
src/: inner.rs  lib.rs
svd/: R7FA0E107.svd  R7FA2A2AD.svd  R7FA2E1A9.svd  R7FA2E2A7.svd  R7FA2E307.svd  R7FA2L1AB.svd  R7FA4E10D.svd  R7FA4E2B9.svd  R7FA4T1BB.svd  R7FA6M1AD.svd  R7FA6T3BB.svd
svd_patch/: R7FA0E107.svd  R7FA2A1AB.svd  R7FA2A2AD.svd  R7FA2E1A9.svd  R7FA2E2A7.svd  R7FA2E307.svd  R7FA2L1AB.svd  R7FA4E10D.svd  R7FA4E2B9.svd  R7FA4L1BD.svd  R7FA4M3AF.svd  R7FA4T1BB.svd  R7FA4W1AD.svd  R7FA6E10F.svd  R7FA6E2BB.svd  R7FA6M1AD.svd  R7FA6M2AF.svd  R7FA6M3AH.svd  R7FA6M4AF.svd  R7FA6M5BH.svd  R7FA6T1AD.svd  R7FA6T2BD.svd  R7FA6T3BB.svd  r7fa4m2ad.svd
(+1450 files in other folders)
