[package]
name = "ra-pac"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Peripheral Access Crate (PAC) for Renesas RA Microcontrollers."
authors = ["Tri Nguyen <trongtribk06@gmail.com>"]
keywords = ["arm", "cortex-m", "ra", "renesas", "peripherals"]
repository = "https://github.com/nguyentri/ra-pac"
documentation = "https://docs.embassy.dev/nguyentri/ra-pac"

[dependencies]
cortex-m-rt = "0.7.5"
cortex-m = "0.7.6"
defmt = { version = "1.0.1", optional = true }

[features]
# Features for RT and defmt
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]

# RA0 Series (Cortex-M23)
ra0e1 = []

# RA2 Series (Cortex-M23)
ra2a1 = []
ra2a2 = []
ra2e1 = []
ra2e2 = []
ra2e3 = []
ra2l1 = []

# RA4 Series (Cortex-M4 and Cortex-M33)
ra4e1 = []
#ra4e2 = []
#ra4l1 = []
ra4m1 = [] # thumbv7em-none-eabihf (Cortex-M4)
ra4m2 = []
ra4m3 = []
#ra4t1 = [] # thumbv8m.main-none-eabihf (Cortex-M33)
ra4w1 = [] # thumbv7em-none-eabihf (Cortex-M4)

# RA6 Series (Cortex-M4 and Cortex-M33)
ra6e1 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)
#ra6e2 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)
ra6m1 = [] # Cortex-M4 (thumbv7em-none-eabihf)
ra6m2 = [] # Cortex-M4 (thumbv7em-none-eabihf)
ra6m3 = [] # Cortex-M4 (thumbv7em-none-eabihf)
ra6m4 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)
ra6m5 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)
ra6t1 = [] # Cortex-M4 (thumbv7em-none-eabihf)
#ra6t2 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)
#ra6t3 = [] # Cortex-M33 (thumbv8m.main-none-eabihf)

# RA8 Series (Cortex-M33)
#ra8d1 = []
#ra8e1 = []
#ra8e2 = []
#ra8m1 = []
#ra8t1 = []

[package.metadata.embassy_docs]
src_base = "https://github.com/nguyentri/ra-pac/blob/v$VERSION/src/"
src_base_git = "https://github.com/nguyentri/ra-pac/blob/$COMMIT/src/"
features = ["rt"]
flavors = [
    # RA0 Series (Cortex-M23)
    { regex_feature = "ra0", target = "thumbv8m.base-none-eabi" },

    # RA2 Series (Cortex-M23)
    { regex_feature = "ra2[a-z0-9]+", target = "thumbv8m.base-none-eabi" },

    # RA4 Series (Cortex-M4 and Cortex-M33)
    { regex_feature = "ra4m1", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra4w1", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra4[a-z0-9]+", target = "thumbv8m.main-none-eabihf" }, # Cortex-M33

    # RA6 Series (Cortex-M4 and Cortex-M33)
    { regex_feature = "ra6m1", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra6m2", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra6m3", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra6t1", target = "thumbv7em-none-eabihf" },            # Cortex-M4
    { regex_feature = "ra6[a-z0-9]+", target = "thumbv8m.main-none-eabihf" }, # Cortex-M33

    # RA8 Series (Cortex-M33)
    { regex_feature = "ra8[a-z0-9]+", target = "thumbv8m.main-none-eabihf" },
]
